Removed: depositing application from ingest request params
